# previous

./: .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake  filesharing.howto.txt  networking.howto.txt  previous.spec  readme.previous.txt
Visual.Studio/: VisualStudioFix.h
cmake/: DistClean.cmake  Toolchain-mingw32.cmake  config-cmake.h
python-ui/: cmake_install.cmake
src/: CMakeCache.txt  CMakeLists.txt  ROMV66-0001E-02588.ASM  bmap.c  boot.txt  cart.c  cfgopts.c  change.c  clocks_timings.c  configuration.c  control.c  cycInt.c  dialog.c  dma.c  enet_slirp.c  esp.c  ethernet.c  fast_screen.c  file.c  floppy.c  ioMem.c  ioMemTabNEXT.c  ioMemTabTurbo.c  keymap.c  kms.c  m68000.c  main.c  memorySnapShot.c  mo.c  nbic.c  nextMemory.c  options.c  printer.c  ramdac.c  reset.c  resolution.c  rs.c  rtcnvram.c  scc.c  screen.c  (+10 more)
src/convert/: high640x8.c  routines.h
src/cpu/: CMakeLists.txt  compat.h  cpu_prefetch.h  cpuemu_common.c  cpummu.c  cpummu.h  cpummu030.c  cpummu030.h  custom.c  fpp-softfloat.h  fpp.c  gencpu.c  hatari-glue.c  hatari-glue.h  md-fpp.h  memory.c  memory.h  mmu_common.h  newcpu.c  newcpu.h  options_cpu.h  readcpu.h  sysdeps.h
src/cpu/jit/: compemu_fpp.c
src/debug/: 68kDisass.c  CMakeLists.txt  breakcond.c  cmake_install.cmake  debugInfo.c  debugcpu.c  debugui.c  debugui.h  evaluate.c  log.c  log.h  profile.c  symbols.c
src/dimension/: dimension.h  i860.hpp  i860cfg.h  i860dbg.cpp  i860dec.cpp  nd_devs.c  nd_devs.h  nd_rom.h  nd_sdl.c  nd_sdl.h  nd_vio.h
src/dsp/: CMakeLists.txt  dsp.c  dsp.h  dsp_core.c  dsp_core.h  dsp_cpu.c
src/gui-osx/: CreateFloppyController.m  Info-Previous.plist  PrefsController.h  PrefsController.m  Previous.icns  SDLMain.m  Shared.h
src/gui-osx/English.lproj/: InfoPlist.strings
src/gui-osx/English.lproj/SDLMain.nib/: designable.nib
src/gui-osx/French.lproj/: InfoPlist.strings
src/gui-osx/French.lproj/SDLMain.nib/: keyedobjects.nib
src/gui-sdl/: CMakeLists.txt  cmake_install.cmake  dlgAbout.c  dlgAdvanced.c  dlgBoot.c  dlgDevice.c  dlgDimension.c  dlgDiskSelect.c  dlgEthernet.c  dlgFileSelect.c  dlgFloppy.c  dlgHardDisk.c  dlgMain.c  dlgMemory.c  dlgMemoryAdvanced.c  dlgMissingFile.c  dlgMouse.c  dlgNewDisk.c  dlgOpticalDisk.c  dlgRom.c  dlgSCSI.c  dlgSound.c  dlgSystem.c  sdlgui.c
src/gui-win/: Makefile  previous-winicon.rc
src/includes/: adb.h  audio.h  bmap.h  change.h  configuration.h  createBlankImage.h  cycInt.h  dialog.h  dimension.h  dma.h  esp.h  ethernet.h  floppy.h  ioMemTables.h  keymap.h  kms.h  m68000.h  main.h  mo.h  nbic.h  nextMemory.h  options.h  paths.h  printer.h  queue.h  reset.h  rs.h  scc.h  screen.h  scsi.h  sdlgui.h  shortcut.h  snd.h  statusbar.h  sysReg.h  video.h
src/slirp/: CMakeLists.txt  bootp.h  misc.c  queue.h  slirp.h  socket.c  tcp_input.c
src/softfloat/: CMakeLists.txt  fyl2x.c  mamesf.h  softfloat-specialize.h  softfloat.c  softfloat_decimal.c  softfloat_extension.c  softfloat_fpsp_tables.h
src/uae-cpu/: cmake_install.cmake  cpuemu.c  cpustbl.c  memory.h
trunk/: CMakeLists.txt  readme.previous.txt
trunk/Visual.Studio/: VisualStudioFix.c
trunk/cmake/: FindSDL2.cmake  Toolchain-mingw32.cmake
trunk/src/: CMakeLists.txt  adb.c  audio.c  avi_record.c  bmap.c  cfgopts.c  change.c  clocks_timings.c  cmake_install.cmake  configuration.c  control.c  cycInt.c  cycles.c  dialog.c  dma.c  dsp.c  enet_slirp.c  esp.c  ethernet.c  fast_screen.c  file.c  floppy.c  host.c  ioMem.c  ioMemTabNEXT.c  ioMemTabTurbo.c  keymap.c  kms.c  m68000.c  main.c  mo.c  nextMemory.c  options.c  paths.c  printer.c  ramdac.c  reset.c  resolution.c  rs.c  rtcnvram.c  (+11 more)
trunk/src/convert/: high640x8.c  macros.h
trunk/src/cpu/: CMakeLists.txt  build68k.c  cpu_prefetch.h  cpuemu_common.c  cpummu.c  cpummu.h  cpummu030.c  cpummu030.h  custom.c  fpp-softfloat.h  fpp.c  gencpu.c  hatari-glue.c  md-fpp.h  memory.c  memory.h  mmu_common.h  newcpu.c  newcpu.h  readcpu.c  sysconfig.h  version_readme.txt
trunk/src/cpu/jit/: compemu.h  compemu_codegen.h  compemu_support.c  compemu_support_codegen.c  gencomp.c
trunk/src/debug/: 68kDisass.c  CMakeLists.txt  breakcond.c  debugInfo.c  debugcpu.c  debugcpu.h  debugui.c  evaluate.c  log.h  profile.c
trunk/src/dimension/: CMakeLists.txt  dimension.c  i860.cpp  i860.hpp  i860dbg.cpp  i860dec.cpp  i860dis.cpp  nd_mem.c  nd_mem.h  nd_nbic.c  nd_nbic.h  nd_rom.c  nd_sdl.c  nd_vio.c
trunk/src/dsp/: dsp.c  dsp_core.c  dsp_core.h  dsp_cpu.c  dsp_cpu.h  dsp_disasm.c
trunk/src/gui-osx/: CreateFloppyController.m  Info-Previous.plist  PrefsController.m  Previous.icns  SDLMain.m
trunk/src/gui-osx/English.lproj/: InfoPlist.strings
trunk/src/gui-osx/English.lproj/SDLMain.nib/: keyedobjects.nib
trunk/src/gui-osx/French.lproj/: InfoPlist.strings
trunk/src/gui-osx/French.lproj/SDLMain.nib/: designable.nib
trunk/src/gui-sdl/: CMakeLists.txt  dlgAbout.c  dlgAdvanced.c  dlgAlert.c  dlgEthernet.c  dlgFileSelect.c  dlgFloppy.c  dlgHardDisk.c  dlgKeyboard.c  dlgMain.c  dlgMemory.c  dlgMemoryAdvanced.c  dlgMissingFile.c  dlgMouse.c  dlgOpticalDisk.c  dlgPrinter.c  dlgRom.c  dlgSCSI.c  dlgScreen.c  dlgSound.c  dlgSystem.c  sdlgui.c
trunk/src/includes/: audio.h  bmap.h  configuration.h  control.h  cycInt.h  dialog.h  dma.h  dsp.h  enet_slirp.h  esp.h  ethernet.h  file.h  floppy.h  host.h  ioMem.h  ioMemTables.h  keymap.h  kms.h  m68000.h  main.h  mo.h  nextMemory.h  queue.h  ramdac.h  reset.h  rs.h  rtcnvram.h  scandir.h  scc.h  screen.h  scsi.h  sdlgui.h  statusbar.h  str.h  sysReg.h  tmc.h  unzip.h  video.h  zip.h
trunk/src/slirp/: CMakeLists.txt  bootp.c  ip_input.c  slirp.h  slirp_config.h
trunk/src/softfloat/: CMakeLists.txt  fsincos.c  mamesf.h  softfloat-macros.h  softfloat.c  softfloat.h  softfloat_fpsp.c
trunk/src/uae-cpu/: cputbl.h  gencpu.c  hatari-glue.c  memory.c  newcpu.c
